--- a/GFL/index.html
+++ b/GFL/index.html
@@ -123,7 +123,7 @@
                 document.getElementById('search-text').style.display = 'inline';
                 document.getElementById('tags-list').style.display = 'none';
                 searchTextField.value = '';
-                var truthTags = document.getElementsByClassName('selectedTag');
+                var truthTags = Array.from(document.getElementsByClassName('selectedTag'));
                 do {
                     for (const element of truthTags) {
                         element.className = 'tags unselectedTag';
