--- a/GFL/index.html
+++ b/GFL/index.html
@@ -134,7 +134,7 @@
                     //if (document.getElementsByClassName('selectedTag')) {                                       //Shouldn't even be here.
                     //    textMode();
                     //}
-                } while (truthTags)
+                } while (truthTags.length > 0)
             }
 
             function tagMode() {
