--- a/GFL/index.html
+++ b/GFL/index.html
@@ -53,7 +53,13 @@
             display: inline-grid;                       /* For making the tag buttons stay together on wrap. */
         }
 
-        .card-tags, .selectedTag {
+        .card-tags {
+            background: transparent;
+            color: aqua;
+            line-height: 20px;
+        }
+        
+        .selectedTag {
             background: transparent;
             color: aqua;
         }
