--- a/GFL/index.html
+++ b/GFL/index.html
@@ -106,9 +106,9 @@
             </section>
         </div>
 
-        <script type="text/javascript" src="/GFL/tempcard.js"></script>
-        <!--script type="text/json" src="/GFL/cards.json"></script-->
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script type="text/javascript" src="/externaljavascript.js"></script>
+        <script type="text/javascript" src="/GFL/tempcard.js"></script>
         <script>
             const searchTextField = document.getElementById('search-text');
             const cardField = document.getElementById('qna');
