--- a/GFL/index.html
+++ b/GFL/index.html
@@ -69,6 +69,10 @@
             color: black;
         }
 
+        .twitter-tweet iframe {
+            width: 100%;
+        }
+
         #search-text {
             width: calc(100% - 76px);
         }
