--- a/GFL/index.html
+++ b/GFL/index.html
@@ -70,7 +70,7 @@
         }
 
         .twitter-tweet iframe {
-            width: 100%;
+            width: inherit;
         }
 
         #search-text {
