--- a/GFL/index.html
+++ b/GFL/index.html
@@ -69,7 +69,7 @@
             color: black;
         }
 
-        .twitter-tweet iframe {
+        .twitter-tweet iframe {                         /* Needs more responsive solution. Works on first load only. */
             width: inherit;
         }
 
