--- a/GFL/index.html
+++ b/GFL/index.html
@@ -79,7 +79,7 @@
 
         #tags-list {
             text-align: center;
-            display: none;
+            display: none;                              /* Makes class hidden on default. */
         }
     </style>
 
