--- a/GFL/index.html
+++ b/GFL/index.html
@@ -73,6 +73,11 @@
             width: inherit;
         }
 
+        .gdoc {
+            width: 100%;
+            aspect-ratio: 1/1;
+        }
+
         #search-text {
             width: calc(100% - 76px);
         }
