--- a/GFL/index.html
+++ b/GFL/index.html
@@ -99,7 +99,7 @@
 
         <div class="container">
             <section id="main_content">
-                <p><h1><a href="/GFL/indexsub">Link to topics repository</a></h1></p>
+                <p><h1><a href="/GFL/mainpage">Link to topics repository</a></h1></p>
                 
                 <label><input type="radio" id="text-input" name="input-type" onclick="textMode()" checked>Search by keyword</label>
                 <label><input type="radio" id="tag-input" name="input-type" onclick="tagMode()">Search by tags</label>
