--- a/GFL/index.html
+++ b/GFL/index.html
@@ -198,7 +198,7 @@
             }
 
             function randomCards() {
-                const maxValue = questionCards.length;
+                const maxValue = questionCards.length - 1;
                 var indices = [];
                 var output = '';
 
