--- a/GFL/index.html
+++ b/GFL/index.html
@@ -124,7 +124,10 @@
             const questionCards = cardData;
 
             document.getElementById('tags-list').innerHTML = Object.values(dataTags).map(val => 
-            `<label class="tags unselectedTag" id="${val}-label"><input type="checkbox" id="${val}" onclick="toggleTag(this)">${val}</label>` ).join(' ');
+                `<label class="tags unselectedTag" id="${val}-label">
+                    <input type="checkbox" id="${val}" onclick="toggleTag(this)">${val}
+                </label>` 
+            ).join(' ');
             
             if (sessionStorage.outputCards == null) {
                 cardField.innerHTML = randomCards();
