--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <header>
             <div class="container">
                 <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-                <h2>Welcome to the Main Page.</h2>
+                <h2>Welcome to the Main Page</h2>
             </div>
         </header>
 
         <div class="container">
             <section id="main_content">
-                <p><h1><a href="/GFL">Link to GFL FAQs.</a></h1></p>
+                <p><h1><a href="/GFL">Link to GFL FAQs</a></h1></p>
             </section>
         </div>
     </body>
