--- a/GFL/index.html
+++ b/GFL/index.html
@@ -99,6 +99,8 @@
 
         <div class="container">
             <section id="main_content">
+                <p>&lt;<a href="../">Back</a></p>
+                
                 <p><h1><a href="/GFL/mainpage">Link to topics repository</a></h1></p>
                 
                 <label><input type="radio" id="text-input" name="input-type" onclick="textMode()" checked>Search by keyword</label>
