--- a/GFL/index.html
+++ b/GFL/index.html
@@ -89,14 +89,16 @@
     </style>
 
     <body>
-        <header class="container">
-            <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-            <h2>Girls' Frontline Reddit Lounge FAQs</h2>
+        <header>
+            <div class="container">
+                <a id="a-title" href="/"><h1>Random Scraps</h1></a>
+                <h2>Girls' Frontline Reddit Lounge FAQs</h2>
 
-            <section id="downloads">
-                <a href="../" class="btn btn-github"><span class="icon"></span> Back</a>
-                <!-- Menu Buttons -->
-            </section>
+                <section id="downloads">
+                    <a href="../" class="btn btn-github"><span class="icon"></span> Back</a>
+                    <!-- Menu Buttons -->
+                </section>
+            </div>
         </header>
 
         <section id="main_content" class="container">
