--- a/GFL/index.html
+++ b/GFL/index.html
@@ -101,21 +101,23 @@
             </div>
         </header>
 
-        <section id="main_content" class="container">
-            <p><h1><a href="/GFL/mainpage">Link to topics repository</a></h1></p>
-            
-            <label><input type="radio" id="text-input" name="input-type" onclick="textMode()" checked>Search by keyword</label>
-            <label><input type="radio" id="tag-input" name="input-type" onclick="tagMode()">Search by tags</label>
+        <div class="container">
+            <section id="main_content">
+                <p><h1><a href="/GFL/mainpage">Link to topics repository</a></h1></p>
+                
+                <label><input type="radio" id="text-input" name="input-type" onclick="textMode()" checked>Search by keyword</label>
+                <label><input type="radio" id="tag-input" name="input-type" onclick="tagMode()">Search by tags</label>
 
-            <form onsubmit="findCards()">
-                <div id="tags-list"></div>
+                <form onsubmit="findCards()">
+                    <div id="tags-list"></div>
 
-                <input type="text" id="search-text" placeholder="Search...">
-                <input type="submit">
-            </form>
+                    <input type="text" id="search-text" placeholder="Search...">
+                    <input type="submit">
+                </form>
 
-            <div id="qna"></div>
-        </section>
+                <div id="qna"></div>
+            </section>
+        </div>
 
         <script type="text/javascript" src="/externaljavascript.js"></script>
         <script type="text/javascript" src="/GFL/tempcard.js"></script>
