--- a/GFL/index.html
+++ b/GFL/index.html
@@ -131,13 +131,21 @@
                     <input type="checkbox" id="${val}" onclick="toggleTag(this)">${val}
                 </label>` 
             ).join(' ');
+
+            const searchParams = new URLSearchParams(location.search);
             
-            if (sessionStorage.outputCards == null) {
+            /* if (sessionStorage.outputCards == null) {
                 cardField.innerHTML = randomCards();
             } else if (sessionStorage.outputCards != null) {
                 cardField.innerHTML = searchCards();
             } else {                                                            //Catch
                 cardField.innerHTML = 'Weird jank: ' + sessionStorage.outputCards;
+            } */
+
+            if (searchParams.has('search') || searchParams.has('tags')) {       //Test
+                cardField.innerHTML = searchCards();
+            } else {
+                cardField.innerHTML = randomCards();
             }
 
             function textMode() {
@@ -167,15 +175,24 @@
             }
 
             function findCards() {                                              //Runs on submit
-                sessionStorage.outputCards = searchTextField.value;
+                //sessionStorage.outputCards = searchTextField.value;
+                if (searchTextField.value.includes('Tags:')) {
+                    searchParams.delete('search');
+                    searchParams.set('tags', searchTextField.value.slice(6));
+                } else {
+                    searchParams.delete('tags');
+                    searchParams.set('search', searchTextField.value);
+                }
             }
 
             function searchCards() {
-                const searchText = sessionStorage.outputCards;
+                //const searchText = sessionStorage.outputCards;
                 var output = '';
 
-                if (searchText.includes('Tags:')) {
-                    const cardTags = searchText.replace('Tags:', '').split(' ').filter(Boolean);
+                //if (searchText.includes('Tags:')) {
+                if (searchParams.has('tags')) {
+                    //const cardTags = searchText.replace('Tags:', '').split(' ').filter(Boolean);
+                    const cardTags = searchParams.get('tags').split(' ').filter(Boolean);
                     if (cardTags) {
                         var matchCheck = function(card) {
                             return IsSubsetOf(cardTags, card.tags);
@@ -184,8 +201,10 @@
                         return 'Empty search.';
                     }
                 } else {
-                    if (searchText) {
-                        const phrase = new RegExp(searchText, 'i');
+                    //if (searchText) {
+                    if (searchParams.get('search')) {
+                        //const phrase = new RegExp(searchText, 'i');
+                        const phrase = new RegExp(searchParams.get('search'), 'i');
                         var matchCheck = function(card) {
                             return phrase.test(card.questions) || phrase.test(RemoveHTMLTag(card.answers));
                         }
