--- a/GFL/index.html
+++ b/GFL/index.html
@@ -132,7 +132,7 @@
                 </label>` 
             ).join(' ');
 
-            const searchParams = new URLSearchParams(location.search);
+            var searchParams = new URLSearchParams(location.search);
             
             /* if (sessionStorage.outputCards == null) {
                 cardField.innerHTML = randomCards();
